# show

./: .gitignore  CONTRIBUTING.md  HOWTO.md  LESSONS_LEARNED.md  Makefile  README.md  RESOURCES.md  SHOW_NOTES_TEMPLATE.md
.github/: ISSUE_TEMPLATE.md
ci/render/: Cargo.toml
ci/render/src/: main.rs
ci/render/templates/: EPISODE_LIST.md  SHOW_NOTES.md  TWEET.md  WEBSITE.md  YOUTUBE.md  YOUTUBE_TITLE.md
episode/: .gitignore
episode/0/: README.md  episode.yml
episode/1/: README.md  episode.yml
episode/10/: README.md  episode.yml
episode/10/checklink/: Cargo.toml  README.md
episode/10/checklink/src/: main.rs
episode/2/: README.md  episode.yml
episode/2/python/: Python List Comprehensions.ipynb
episode/3/: README.md  episode.yml
episode/4/: README.md  episode.yml
episode/4/code/: Cargo.toml
episode/5/: README.md  episode.yml
episode/6/: README.md  episode.yml
episode/6/balanced/: Cargo.toml
episode/6/parametrize/: Cargo.toml
episode/7/: README.md  episode.yml
episode/7/humandate/: Cargo.toml
episode/8/: README.md  episode.yml
episode/8/lenrs/: .gitignore  Cargo.toml  setup.py
episode/9/: README.md  episode.yml
episode/9/bench/: Cargo.toml  README.md
episode/9/go/: .fixed.go.swp  .gitignore  README.md  fixed.go  race.go  (+1 more)
episodes/0-humble-beginnings/: README.md  show_notes.md
episodes/1-hello-universe/: README.md  show_notes.md
episodes/2-python-vs-rust-pt1/: README.md
episodes/2-snakes-and-gears/: README.md
episodes/3-code-review/: README.md
release/youtube/: Dockerfile  main.go
templates/: SHOW_NOTES.md  YOUTUBE.md
(+29 files in other folders)
