[package]
name = "checklink"
version = "0.1.0"
authors = ["techblog-bot <trv.techblog@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-rs = "0.7.0"
serde_json = "1.0.56"
regex = "1.3.9"
reqwest = { version = "0.10", features = ["blocking"] }
pulldown-cmark = "0.7.2"
